# DA3cpplib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: PLAN.md  architecture.md  deployment-guide.md  dpt-head-cuda-kernel-plan.md  perf-baselines.md  performance-optimization.md  porting.md  setup-development-guide.md  tensorrt.md  user-guide.md
docs/plans/: future-work.md  gemm-rewrite-plan.md
examples/: CMakeLists.txt  da3_cli.cpp  depth_image.cpp
include/: gpu_preprocess.h
include/da3cpp/: da3.h  da3_c.h  da_capi.h
resources/html/: index.html
resources/js/: app.js
scripts/: apply_patches.sh  bench.sh  build.sh  cuda_env.sh  da3.service.in  download_models.sh  launch_depth_ui.sh  open_firewall.sh  run_cli.sh  setup.sh  setup_cuda.sh  setup_tls.sh  start.sh  start_all.sh  start_server.sh  stop_all.sh  stop_depth_ui.sh
scripts/convert/: export_da3_depth_onnx.py
scripts/patches/depth-anything.cpp/: 0001-jpeg-encode-decode.patch  0002-custom-dpt-head.patch  0003-tile-size-optimization.patch  0004-turing-discrete-gpu.patch
scripts/patches/ggml/: 0001-da3-custom-cuda-ops.patch
scripts/setup/: setup_tensorrt.sh
src/: api.cpp  attention.cpp  attention.hpp  backend.cpp  backend.hpp  cam_pose.cpp  cam_pose.hpp  cli.cpp  cli.hpp  colmap_export.cpp  colmap_export.hpp  common.hpp  compute_mode.hpp  cuda_head_kernels.cu  cuda_head_kernels.hpp  da_capi.cpp  da_gguf_keys.h  depth_export.cpp  depth_export.hpp  dino_backbone.cpp  dino_backbone.hpp  dpt_blocks.cpp  dpt_blocks.hpp  dpt_head.cpp  dpt_head.hpp  engine.cpp  engine.hpp  ggml_extend.hpp  glb_export.cpp  glb_export.hpp  gpu_preprocess.cu  gs_adapter.cpp  gs_adapter.hpp  gs_head.cpp  gs_head.hpp  image_io.cpp  image_io.hpp  linalg.cpp  linalg.hpp  model_loader.cpp  (+24 more)
src/trt/: trt_depth.cpp  trt_depth.hpp
tests/: CMakeLists.txt  MANUAL_UI_CHECKLIST.md  generate_tensorrt_contract.py  parity.hpp  parity_test.sh  smoke_test.sh  test_linalg.cpp  test_nested_align.cpp  test_ray_pose.cpp  test_tensorrt.cpp
tests/consume_test/: CMakeLists.txt  c_header.c  main.cpp  run.sh
